--- a/src/content/docs/en/guides/cms/payload.mdx
+++ b/src/content/docs/en/guides/cms/payload.mdx
@@ -32,7 +32,7 @@ If you start the PayloadCMS server using `npm run dev`, you can go to `http://lo
 
 You can create a new Collection called `Posts.ts` in `src/collections`.
 
-```astro title="src/collections"
+```astro title="src/collections/Posts.ts"
 import { CollectionConfig } from "payload/types";
 
 const Posts: CollectionConfig = {
