--- a/src/content/docs/en/guides/cms/payload.mdx
+++ b/src/content/docs/en/guides/cms/payload.mdx
@@ -188,7 +188,7 @@ const posts = await res.json()
 
 ### Using the PayloadCMS API to generate pages
 
-The page `src/pages/posts/[slug].astro` [dynamically generates a page](/en/core-concepts/routing/#dynamic-routes) for each post.
+Create a page `src/pages/posts/[slug].astro` to [dynamically generate a page](/en/core-concepts/routing/#dynamic-routes) for each post.
 
 ```astro title="src/pages/posts/[slug].astro"
 ---
