--- a/src/content/docs/en/guides/cms/payload.mdx
+++ b/src/content/docs/en/guides/cms/payload.mdx
@@ -154,7 +154,7 @@ const posts = await res.json()
 
 ## Building a blog with PayloadCMS and Astro
 
-The page `src/pages/index.astro` lists each of your posts with a link to its own page.
+Create a blog index page `src/pages/index.astro` to list each of your posts with a link to its own page.
 
 Fetching via the API an array of objects (posts) that include, among others, the following properties:
 
