--- a/src/content/docs/en/guides/cms/payload.mdx
+++ b/src/content/docs/en/guides/cms/payload.mdx
@@ -156,7 +156,7 @@ const posts = await res.json()
 
 Create a blog index page `src/pages/index.astro` to list each of your posts with a link to its own page.
 
-Fetching via the API an array of objects (posts) that include, among others, the following properties:
+Fetching via the API returns an array of objects (posts) that include, among others, the following properties:
 
 - `title`
 - `content`
