--- a/src/content/docs/en/guides/cms/payload.mdx
+++ b/src/content/docs/en/guides/cms/payload.mdx
@@ -21,13 +21,19 @@ To get started, you will need to have the following:
 
 ### Installing PayloadCMS
 
-Follow the [PayloadCMS Installation docs](https://payloadcms.com/docs/getting-started/installation) in order to install a fresh PayloadCMS app. During the PayloadCMS installation, you will be asked if you want to use a template.
+1. Follow the [PayloadCMS Installation docs](https://payloadcms.com/docs/getting-started/installation) in order to install a fresh PayloadCMS app. 
 
-If you pick one of the available templates (such as 'blog'), additional collections will be generated for you. You can then skip the following section, because you already have a collection other than "Users" that you can use.
+:::note[Choosing a template]
+During the PayloadCMS installation, you will be asked if you want to use a template.
 
-If you don't pick any templates, only a single collection called "Users" will be generated.
+If you do not choose a template, only a single collection called "Users" will be generated and you will have to [define a PayloadCMS collection manually](#creating-a-payload-cms-collection) in Astro to use for your content.
 
-If you start the PayloadCMS server using `npm run dev`, you can go to `http://localhost:3000/admin` to enter your PayloadCMS Dashboard for the first time. Create the initial administrator account and enter the Dashboard. You should now see that the "Users" collection contains just the administrator account.
+Choosing any of the available templates at this step (such as 'blog') automatically generates additional collections for you to use.
+:::
+
+2. Start the PayloadCMS server using `npm run dev` and visit `http://localhost:3000/admin` to enter your PayloadCMS Dashboard for the first time. 
+
+3. Using the Dashboard, create an initial administrator account, which should now be visible as the only entry in your "Users" collection.
 
 #### Creating a PayloadCMS Collection
 
