--- a/src/content/docs/en/guides/cms/payload.mdx
+++ b/src/content/docs/en/guides/cms/payload.mdx
@@ -37,7 +37,7 @@ Choosing any of the available templates at this step (such as 'blog') automatica
 
 #### Creating a PayloadCMS Collection
 
-You can create a new Collection called `Posts.ts` in `src/collections`.
+If you did not choose a template during installation that created a content collection for you, create a new Payload CMS Collection by adding a configuration file in `src/collections/` called `Posts.ts`.
 
 ```astro title="src/collections/Posts.ts"
 import { CollectionConfig } from "payload/types";
