--- a/src/content/docs/en/guides/cms/payload.mdx
+++ b/src/content/docs/en/guides/cms/payload.mdx
@@ -145,7 +145,7 @@ For example, to display a list of post titles and their content:
 ---
 import HomeLayout from "../layouts/HomeLayout.astro";
 
-const res = await fetch("http://localhost:5000/api/posts") // https://localhost:3000/api/posts by default
+const res = await fetch("https://localhost:5000/api/posts") // https://localhost:3000/api/posts by default
 const posts = await res.json()
 ---
 
