--- a/src/content/docs/en/guides/cms/payload.mdx
+++ b/src/content/docs/en/guides/cms/payload.mdx
@@ -22,18 +22,13 @@ To get started, you will need to have the following:
 :::note[Choosing a template]
 During the PayloadCMS installation, you will be asked if you want to use a template.
 
-If you do not choose a template, only a single collection called "Users" will be generated and you will have to [define a PayloadCMS collection manually](#creating-a-payloadcms-collection) in Astro to use for your content.
-
-Choosing any of the available templates at this step (such as 'blog') automatically generates additional collections for you to use. Otherwise, you will need to (manually create your PayloadCMS collections)[]. 
+Choosing any of the available templates at this step (such as 'blog') automatically generates additional collections for you to use. Otherwise, you will need to manually create your PayloadCMS collections.
 :::
 
-2. Start the PayloadCMS server using `npm run dev` and visit `http://localhost:3000/admin` to enter your PayloadCMS Dashboard for the first time. 
+### Configuring Astro for your PayloadCMS collection
 
-3. Using the Dashboard, create an initial administrator account, which should now be visible as the only entry in your "Users" collection.
+Your Payload project template will contain a file called Posts.ts in ``src/collections/. If you did not choose a template during installation that created a content collection for you, you can create a new Payload CMS Collection by adding this configuration file manually. The example below shows this file for a collection called `posts` that requires `title`, `content`, and `slug` fields:
 
-#### Creating a PayloadCMS Collection
-
-If you did not choose a template during installation that created a content collection for you, create a new Payload CMS Collection by adding a configuration file in `src/collections/` called `Posts.ts`.
 
 ```astro title="src/collections/Posts.ts"
 import { CollectionConfig } from "payload/types";
@@ -68,12 +63,9 @@ const Posts: CollectionConfig = {
 
 export default Posts;
 ```
+1. Import and add both `Users` (available in all PayloadCMS projects) and any other collections (e.g. `Posts`) to the available collections in the `payload.config.ts` file.
 
-This creates a "Posts" collection which requires the following : `title`, `content`, `slug`. You will use this collection to manage your blog posts. The colllection is publicly available, so you shouldn't put any sensitive info inside.
-
-You then need to import and add it to the available collections in the `payload.config.ts` file.
-
-```astro title="src/payload.config.ts"
+```astro title="src/payload.config.ts" ins={4, 5, 12}
 import { buildConfig } from "payload/config";
 import path from "path";
 
@@ -95,17 +87,13 @@ export default buildConfig({
 });
 ```
 
-If you then go into the PayloadCMS Dashboard, you should see a new collection called "Posts" appear next to the "Users" collection. Enter the "Posts" collection and create a new post. After saving it, you will notice the API URL appear in the bottom right corner.
+This will make a new collection called "Posts" appear in your PayloadCMS Dashboard next to the "Users" collection. 
 
-If not already running, start the server using `npm run dev` again.
+2. Enter the "Posts" collection and create a new post. After saving it, you will notice the API URL appear in the bottom right corner.
 
-Open `http://localhost:3000/api/posts` in your browser. You should see a JSON file containing the post you have created as an object.
+3. With the dev server running, open `http://localhost:3000/api/posts` in your browser. You should see a JSON file containing the post you have created as an object.
 
-:::tip
-By default, both Astro and PayloadCMS will use the port 3000. You might want to change the PayloadCMS port in the `src/server.ts` file. Don't forget to update the `serverURL` in `src/payload.config.ts` as well.
-:::
-
-```astro title="http://localhost:3000/api/posts"
+```json
 {
    "docs":[
       {
@@ -128,6 +116,9 @@ By default, both Astro and PayloadCMS will use the port 3000. You might want to 
    "nextPage":null
 }
 ```
+:::tip
+By default, both Astro and PayloadCMS will use port 3000. You might want to change the PayloadCMS port in the `src/server.ts` file. Don't forget to update the `serverURL` in `src/payload.config.ts` as well.
+:::
 
 ### Fetching Data
 
