--- a/src/content/docs/en/guides/cms/payload.mdx
+++ b/src/content/docs/en/guides/cms/payload.mdx
@@ -27,7 +27,7 @@ Choosing any of the available templates at this step (such as 'blog') automatica
 
 ### Configuring Astro for your PayloadCMS collection
 
-Your Payload project template will contain a file called Posts.ts in ``src/collections/. If you did not choose a template during installation that created a content collection for you, you can create a new Payload CMS Collection by adding this configuration file manually. The example below shows this file for a collection called `posts` that requires `title`, `content`, and `slug` fields:
+Your Payload project template will contain a file called Posts.ts in `src/collections/`. If you did not choose a template during installation that created a content collection for you, you can create a new Payload CMS Collection by adding this configuration file manually. The example below shows this file for a collection called `posts` that requires `title`, `content`, and `slug` fields:
 
 
 ```astro title="src/collections/Posts.ts"
