--- a/src/content/docs/en/guides/cms/payload.mdx
+++ b/src/content/docs/en/guides/cms/payload.mdx
@@ -11,7 +11,7 @@ i18nReady: false
 
 ## Integrating with Astro
 
-## Prerequisites
+### Prerequisites
 
 
 1. **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time.
